force-app/main/default/objects/AccoutMassPurge__c/AccoutMassPurge__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Setting used IC_BatchPurgeClient for mass deletion</description>
    <label>AccoutMassPurge</label>
</CustomObject>