force-app/main/default/objects/AccoutMassPurge__c/fields/RequestOption__c.field-meta.xml
<CustomField>
    <fullName>RequestOption__c</fullName>
    <description>Contains the value for the field to update</description>
    <label>RequestOption</label>
    <length>255</length>
    <type>Text</type>
</CustomField>