force-app/main/default/objects/AccoutMassPurge__c/fields/WhereClause1__c.field-meta.xml
<CustomField>
    <fullName>WhereClause1__c</fullName>
    <description>Contains the first part of the where clause</description>
    <label>WhereClause1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>