force-app/main/default/objects/AccoutMassPurge__c/fields/WhereClause2__c.field-meta.xml
<CustomField>
    <fullName>WhereClause2__c</fullName>
    <description>Contains :(ownerid = \&apos;005i0000007UUZP\&apos; or  ownerid = \&apos;005i000000461GE\&apos; or ownerid = \&apos;005i0000004MQsP\&apos;)</description>
    <inlineHelpText>Exemple : and (ownerid = \&apos;005i0000007UUZP\&apos; or  ownerid = \&apos;005i000000461GE\&apos; or ownerid = \&apos;005i0000004MQsP\&apos;)</inlineHelpText>
    <label>WhereClause2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>