force-app/main/default/objects/AccoutMassPurge__c/fields/WhereClause3__c.field-meta.xml
<CustomField>
    <fullName>WhereClause3__c</fullName>
    <description>parmis tout les comptes identity select contactid from user where profile.name = \&apos;Identity User\&apos;</description>
    <inlineHelpText>Exemple and PersonContactId not in (select contactid from user where profile.name = \&apos;Identity User\&apos;)</inlineHelpText>
    <label>WhereClause3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>